--- a/vignettes/creating-prior.Rmd
+++ b/vignettes/creating-prior.Rmd
@@ -218,7 +218,9 @@ with 1 misstatement, while using a normal(0.025, 0.05) prior distribution.
 
 ```{r}
 prior <- auditPrior(method = "param", likelihood = "normal", alpha = 0.025, beta = 0.05)
-evaluation(materiality = 0.05, x = 1, n = 60, prior = prior)
+eval <- evaluation(materiality = 0.05, x = 1, n = 60, prior = prior)
+summary(eval)
+plot(eval)
 ```
 
 ## References
