--- a/vignettes/sampling-workflow.Rmd
+++ b/vignettes/sampling-workflow.Rmd
@@ -69,7 +69,7 @@ the misstatement in the population.
 The auditor wants to make a statement that, with 95% confidence, the misstatement
 in the population is lower than the performance materiality of 5%. Based on last
 year's audit at BuildIt, where the upper bound of the misstatement turned out to
-be 2.5%, she wants to tolerate at most 2.5% errors in the intended sample. The
+be 2.5%, they want to tolerate at most 2.5% errors in the intended sample. The
 auditor can therefore re-formulate their statistical statement as that they want
 to conclude that, when 2.5% errors are found in the sample, they can conclude
 with 95% confidence that the misstatement in the population is lower than the
@@ -92,7 +92,7 @@ risk, and the detection risk. Inherent risk is the risk posed by an error in
 BuildIt's financial statement that could be material, before consideration of
 any related control systems (e.g., computer systems). Control risk is the risk
 that a material misstatement is not prevented or detected by BuildIt's internal
-control systems. Detection risk is the risk that Laura will fail to find
+control systems. Detection risk is the risk that the auditor will fail to find
 material misstatements that exist in an BuildIt's financial statements. The
 *ARM* is practically useful because for a given level of audit risk, the
 tolerable detection risk bears an inverse relation to the other two risks. The
