--- a/vignettes/audit-sampling.Rmd
+++ b/vignettes/audit-sampling.Rmd
@@ -74,7 +74,8 @@ auditPrior(method = c(
            ),
            likelihood = c(
              "poisson", "binomial", "hypergeometric",
-             "normal", "uniform", "cauchy", "t", "chisq"
+             "normal", "uniform", "cauchy", "t", "chisq",
+             "exponential"
            ),
            N.units = NULL,
            alpha = NULL,
@@ -113,6 +114,7 @@ auditPrior(method = c(
 - `cauchy`: Cauchy prior distribution.
 - `t`: Student-t prior distribution.
 - `chisq`: Chi-squared prior distribution.
+- `exponential`: Exponential prior distribution.
 
 *Example usage:*
 
