--- a/vignettes/audit-sampling.Rmd
+++ b/vignettes/audit-sampling.Rmd
@@ -343,7 +343,7 @@ To validate the statistical results, **jfa**'s automated
 regularly verify the main output from the package against the following
 benchmarks:
 
-- [Audit Sampling: Audit Guide](https://www.aicpa.org/cpe-learning/publication/audit-sampling-audit-guide-OPL) (Appendix A and Appendix C)
+- [Audit Sampling: Audit Guide](https://www.aicpa-cima.com/cpe-learning/publication/audit-sampling-audit-guide-OPL) (Appendix A and Appendix C)
 - [AuditSampler](https://cplusglobal.wordpress.com/solutions/auditsampler-statistical-sampling-software/)
 - [EZ-quant](https://www.dcaa.mil/Checklists-Tools/EZ-Quant-Applications/)
 - [MUS](https://cran.r-project.org/package=MUS) (R package version 0.1.6)
