--- a/vignettes/jfa.Rmd
+++ b/vignettes/jfa.Rmd
@@ -149,7 +149,8 @@ machine learning algorithm.
 ```{r fig.align="center", fig.height=4, fig.width=6}
 # Model Fairness
 x <- model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
-               reference = "Caucasian")
+  reference = "Caucasian"
+)
 print(x)
 plot(x)
 ```
