--- a/vignettes/algorithm-auditing.Rmd
+++ b/vignettes/algorithm-auditing.Rmd
@@ -65,7 +65,14 @@ model_fairness(
 *Example usage:*
 
 ```{r}
-model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted", reference = "Caucasian", positive = "yes")
+model_fairness(
+  data = compas,
+  sensitive = "Ethnicity",
+  target = "TwoYrRecidivism",
+  predictions = "Predicted",
+  reference = "Caucasian",
+  positive = "yes"
+)
 ```
 
 ## Benchmarks
